--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -1,77 +1,91 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-row class="ion-align-items-center">
-      <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
-      <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
-      <ion-button (click)="dismiss()" fill="clear" class="">
-        <ion-icon name="close-outline"></ion-icon>
-      </ion-button>
-      <h5 class="ion-text-wrap">{{ formTitle }}</h5>
-    </ion-row>
-  </ion-toolbar>
-</ion-header>
+<div class="ion-page">
+  <ion-header>
+    <ion-toolbar>
+      <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
+        <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
+        <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
+        <ion-col>
+          <h5 class="ion-text-wrap">{{ formTitle }}</h5>
+        </ion-col>
+        <ion-col size="1">
+          <ion-button (click)="dismiss()" fill="clear" class="">
+            <ion-icon name="close-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-toolbar>
+  </ion-header>
 
+  <div class="inner-content">
+    <ion-grid>
+      <ion-row class="ion-justify-content-center ion-align-self-center">
+        <ion-col>
+          <ion-row>
+            <ion-col>
+              <ion-row class="ion-padding-top">
+                <ion-item class="w-100 ion-margin-bottom">
+                  <ion-label position="floating">Titulo</ion-label>
+                  <ion-input
+                    [(ngModel)]="image.title"
+                    ngDefaultControl
+                  ></ion-input>
+                </ion-item>
+                <ion-item class="w-100 ion-margin-bottom">
+                  <ion-label position="floating">Código</ion-label>
+                  <ion-input
+                    [(ngModel)]="image.code"
+                    ngDefaultControl
+                  ></ion-input>
+                </ion-item>
+                <ion-item class="w-100 ion-margin-bottom">
+                  <ion-label
+                    [position]="(image.profile_id != undefined) ? 'stacked' : 'floating'"
+                    >Concursante</ion-label
+                  >
+                  <ion-select
+                    #s
+                    [(ngModel)]="image.profile_id"
+                    ngDefaultControl
+                  >
+                    <!-- [(value)]="image.profile_id" -->
+                    <ion-select-option *ngFor="let p of profiles" [value]="p.id"
+                      >{{p.name + ' ' + p.last_name}}</ion-select-option
+                    >
+                  </ion-select>
+                </ion-item>
+              </ion-row>
+              <ion-row class="ion-justify-content-end">
+                <ion-col>
+                  <ion-row class="ion-justify-content-end">
+                    <ion-button
+                      (click)="dismiss()"
+                      fill="clear"
+                      class="ion-margin-start"
+                    >
+                      Cancelar</ion-button
+                    >
 
-<ion-content>
-  <ion-grid>
-    <ion-row class="ion-justify-content-center ion-align-self-center">
-      <ion-col>
-        <ion-row>
-          <ion-col>
-            <ion-row class="ion-padding-top">
-              <ion-item class="w-100 ion-margin-bottom">
-                <ion-label position="floating">Titulo</ion-label>
-                <ion-input [(ngModel)]="image.title" ngDefaultControl></ion-input>
-              </ion-item>
-              <ion-item class="w-100 ion-margin-bottom">
-                <ion-label position="floating">Código</ion-label>
-                <ion-input [(ngModel)]="image.code" ngDefaultControl></ion-input>
-              </ion-item>
-              <ion-item class="w-100 ion-margin-bottom">
-                <ion-label
-                  [position]="(image.profile_id != undefined) ? 'stacked' : 'floating'"
-                  >Concursante</ion-label
-                >
-                <ion-select #s [(ngModel)]="image.profile_id" ngDefaultControl>
-                  <!-- [(value)]="image.profile_id" -->
-                  <ion-select-option *ngFor="let p of profiles" [value]="p.id"
-                    >{{p.name + ' ' + p.last_name}}</ion-select-option
-                  >
-                </ion-select>
-              </ion-item>
-            </ion-row>
-            <ion-row class="ion-justify-content-end">
-              <ion-col>
-                <ion-row class="ion-justify-content-end">
-                  <ion-button
-                    (click)="dismiss()"
-                    fill="clear"
-                    class="ion-margin-start"
-                  >
-                    Cancelar</ion-button
-                  >
-  
-                  <ion-button
-                    expand="block"
-                    type="submit"
-                    class="ion-margin-start"
-                    (click)="postImage()"
-                    [disabled]="!datosCargados()"
-                  >
-                    <ion-spinner
-                      *ngIf="posting"
-                      class="ion-margin-end"
-                      size="small"
-                    ></ion-spinner>
-                    Guardar
-                  </ion-button>
-                </ion-row>
-              </ion-col>
-            </ion-row>
-            
-          </ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+                    <ion-button
+                      expand="block"
+                      type="submit"
+                      class="ion-margin-start"
+                      (click)="postImage()"
+                      [disabled]="!datosCargados()"
+                    >
+                      <ion-spinner
+                        *ngIf="posting"
+                        class="ion-margin-end"
+                        size="small"
+                      ></ion-spinner>
+                      Guardar
+                    </ion-button>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+</div>
