--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -1,4 +1,4 @@
-<div class="ion-page">
+<div [ngClass]="tamWidth > 768? 'ion-page': ''">
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
@@ -7,7 +7,7 @@
         <ion-col>
           <h5 class="ion-text-wrap">{{ formTitle }}</h5>
         </ion-col>
-        <ion-col size="1">
+        <ion-col size="1" class="ion-hide-md-down">
           <ion-button (click)="dismiss()" fill="clear" class="">
             <ion-icon name="close-outline"></ion-icon>
           </ion-button>
@@ -16,7 +16,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div class="inner-content">
+  <div slot="start" class="inner-content ion-float-md-start">
     <ion-grid>
       <ion-row class="ion-justify-content-center ion-align-self-center">
         <ion-col>
